--- a/META.yml
+++ b/META.yml
@@ -30,14 +30,14 @@ no_index:
 provides:
   Time::Duration::Parse::More:
     file: lib/Time/Duration/Parse/More.pm
-    version: 0.002
+    version: 0.003
 requires:
   perl: 5.006
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Time-Duration-Parse-More
   homepage: https://github.com/melo/perl-time-duration-parse-more
   repository: https://github.com/melo/perl-time-duration-parse-more.git
-version: 0.002
+version: 0.003
 x_Dist_Zilla:
   perl:
     version: 5.014002
@@ -154,6 +154,10 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Author::MELO/MakeMaker'
       version: 4.300028
+    -
+      class: Dist::Zilla::Plugin::Test::Pod::No404s
+      name: '@Author::MELO/Test::Pod::No404s'
+      version: 1.001
     -
       class: Dist::Zilla::Plugin::Test::UnusedVars
       name: '@Author::MELO/@TestingMania/Test::UnusedVars'
