--- a/dist.ini
+++ b/dist.ini
@@ -5,4 +5,4 @@ copyright_holder = Pedro Melo
 copyright_year   = 2013
 
 [@Author::MELO]
-skip_plugins = Test::Portability|Test::Pod::No404s
+skip_plugins = Test::Portability
