--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300028, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300029, CPAN::Meta::Converter version 2.120921'
 license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -30,46 +30,53 @@ no_index:
 provides:
   Time::Duration::Parse::More:
     file: lib/Time/Duration/Parse/More.pm
-    version: 0.003
+    version: 0.004
 requires:
   perl: 5.006
 resources:
-  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Time-Duration-Parse-More
-  homepage: https://github.com/melo/perl-time-duration-parse-more
-  repository: https://github.com/melo/perl-time-duration-parse-more.git
-version: 0.003
+  bugtracker: https://github.com/melo/perl-time-duration-parse-more/issues
+  repository: git://github.com/melo/perl-time-duration-parse-more.git
+version: 0.004
 x_Dist_Zilla:
   perl:
     version: 5.014002
   plugins:
     -
+      class: Dist::Zilla::Plugin::GitHub::Meta
+      name: '@Author::MELO/@GitHub/GitHub::Meta'
+      version: 0.30
+    -
+      class: Dist::Zilla::Plugin::GitHub::Update
+      name: '@Author::MELO/@GitHub/GitHub::Update'
+      version: 0.30
+    -
       class: Dist::Zilla::Plugin::Git::NextVersion
       name: '@Author::MELO/Git::NextVersion'
-      version: 2.005
+      version: 2.006
     -
       class: Dist::Zilla::Plugin::GenerateFile
       name: '@Author::MELO/GenerateManifestSkip'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::GenerateFile
       name: '@Author::MELO/GenerateTravisCfg'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Author::MELO/GatherDir'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Author::MELO/PruneCruft'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Author::MELO/ManifestSkip'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::PruneFiles
       name: '@Author::MELO/PruneRepoMetaFiles'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::Authority
       name: '@Author::MELO/Authority'
@@ -77,7 +84,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@Author::MELO/NextRelease'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::OurPkgVersion
       name: '@Author::MELO/OurPkgVersion'
@@ -89,31 +96,19 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::MELO/License'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Author::MELO/Readme'
-      version: 4.300028
-    -
-      class: Dist::Zilla::Plugin::Bugtracker
-      name: '@Author::MELO/Bugtracker'
-      version: 1.111080
-    -
-      class: Dist::Zilla::Plugin::Repository
-      name: '@Author::MELO/Repository'
-      version: 0.19
-    -
-      class: Dist::Zilla::Plugin::GithubMeta
-      name: '@Author::MELO/GithubMeta'
-      version: 0.28
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Author::MELO/AutoPrereqs'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::MetaNoIndex
       name: '@Author::MELO/MetaNoIndex'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::MetaProvides::Package
       name: '@Author::MELO/MetaProvides::Package'
@@ -125,15 +120,15 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::MELO/MetaConfig'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Author::MELO/MetaYAML'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Author::MELO/MetaJSON'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -141,19 +136,19 @@ x_Dist_Zilla:
           phase: test
           type: requires
       name: '@Author::MELO/TestMoreWithSubtests'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Author::MELO/ExecDir'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Author::MELO/ShareDir'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Author::MELO/MakeMaker'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::Test::Pod::No404s
       name: '@Author::MELO/Test::Pod::No404s'
@@ -173,7 +168,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Author::MELO/@TestingMania/PodCoverageTests'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::Test::CPAN::Changes
       name: '@Author::MELO/@TestingMania/Test::CPAN::Changes'
@@ -189,7 +184,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@Author::MELO/@TestingMania/MetaTests'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::Test::Compile
       name: '@Author::MELO/@TestingMania/Test::Compile'
@@ -217,7 +212,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Author::MELO/@TestingMania/PodSyntaxTests'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::MojibakeTests
       name: '@Author::MELO/@TestingMania/MojibakeTests'
@@ -225,7 +220,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::MELO/Manifest'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::CheckExtraTests
       name: '@Author::MELO/CheckExtraTests'
@@ -237,35 +232,35 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Author::MELO/TestRelease'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::MELO/ConfirmRelease'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::MELO/UploadToCPAN'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::Git::CommitBuild
       name: '@Author::MELO/Git::CommitBuild'
-      version: 2.005
+      version: 2.006
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Author::MELO/@Git/Check'
-      version: 2.005
+      version: 2.006
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: '@Author::MELO/@Git/Commit'
-      version: 2.005
+      version: 2.006
     -
       class: Dist::Zilla::Plugin::Git::Tag
       name: '@Author::MELO/@Git/Tag'
-      version: 2.005
+      version: 2.006
     -
       class: Dist::Zilla::Plugin::Git::Push
       name: '@Author::MELO/@Git/Push'
-      version: 2.005
+      version: 2.006
     -
       class: Dist::Zilla::Plugin::InstallRelease
       name: '@Author::MELO/InstallRelease'
@@ -281,30 +276,30 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300028
+      version: 4.300029
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300028
+      version: 4.300029
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.300028
+    version: 4.300029
 x_authority: cpan:MELO
