Import of MELO/Time-Duration-Parse-More-0.005 from CPAN.
gitpan-cpan-distribution: Time-Duration-Parse-More
gitpan-cpan-version:      0.005
gitpan-cpan-path:         MELO/Time-Duration-Parse-More-0.005.tar.gz
gitpan-cpan-author:       MELO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -30,13 +30,14 @@ no_index:
 provides:
   Time::Duration::Parse::More:
     file: lib/Time/Duration/Parse/More.pm
-    version: 0.004
+    version: 0.005
 requires:
   perl: 5.006
 resources:
   bugtracker: https://github.com/melo/perl-time-duration-parse-more/issues
+  homepage: http://metacpan.org/release/Time-Duration-Parse-More/
   repository: git://github.com/melo/perl-time-duration-parse-more.git
-version: 0.004
+version: 0.005
 x_Dist_Zilla:
   perl:
     version: 5.014002
